--- a/cart/public/index.html
+++ b/cart/public/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>container</title>
+    <title>Document</title>
   </head>
   <body>
-    <div id="dev-products"></div>
     <div id="dev-cart"></div>
-    <!-- <div id="container"></div> -->
   </body>
 </html>
