--- a/container/public/index.html
+++ b/container/public/index.html
@@ -6,7 +6,7 @@
     <title>container</title>
   </head>
   <body>
-    <div id="dev-products"></div>
-    <div id="dev-cart"></div>
+    <div id="my-products"></div>
+    <div id="my-cart"></div>
   </body>
 </html>
